fix menu z-index bug

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -193,6 +193,7 @@ tr:nth-child(odd) {background: #FFF}
 @media only screen and (max-width: 768px) {
   .nav-menu {
       position: fixed;
+      z-index: 9;
       left: -110%;
       top: 2.9rem;
       flex-direction: column;
